fix navbar visibility state

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -13,7 +13,7 @@
 }
 
 .styledNavHidden {
-  transform: translateY(-constants.$navbar-height);
+  transform: translateY(0 - constants.$navbar-height);
 }
 
 .itemsContainer {
